update (2024-11-25): fitur wh n stk plus penambahan dan perbaikan
